fix spacing in notifications

--- a/components/comment.module.css
+++ b/components/comment.module.css
@@ -47,6 +47,7 @@
 .children {
     margin-top: 0;
     padding-top: .25rem;
+    margin-left: 24px;
 }
 
 .comments {
